# LiberTEM-live

./: .buildinfo  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.rst  acknowledgments.html  azure-pipelines-data.yml  azure-pipelines.yml  changelog.html  codecov.yml  conftest.py  dectris-acquisition-example.html  detectors.html  docs_requirements.txt  examples.html  genindex.html  hatch_build.py  index.html  installation.html  k2is-listeners.sh  merlin-example.html  merlin-lowlevel-example.html  nbval_sanitize.cfg  objects.inv  output.txt  override_requirements.txt  py-modindex.html  pyproject.toml  pytest.ini  reference.html  search.html  searchindex.js  setup.cfg  setup.py  test_requirements.txt  tox.ini  usage.html
.doctrees/: acknowledgments.doctree  changelog.doctree  dectris-acquisition-example.doctree  detectors.doctree  examples.doctree  index.doctree  installation.doctree  merlin-example.doctree  merlin-lowlevel-example.doctree  reference.doctree  usage.doctree
.doctrees/changelog/documentation/: empty.doctree
.doctrees/changelog/misc/: mock_merlin_ds.doctree
.doctrees/detectors/: asi_tpx3.doctree  dectris.doctree  merlin.doctree
.doctrees/nbsphinx/: merlin-example.ipynb
.doctrees/reference/: asi_tpx3.doctree  dectris.doctree  memory.doctree  merlin.doctree
.github/: PULL_REQUEST_TEMPLATE
.github/workflows/: ci.yml  trigger-pages-rebuild.yml
_modules/: index.html
_modules/libertem_live/: api.html  hooks.html
_modules/libertem_live/detectors/asi_tpx3/: acquisition.html  connection.html
_modules/libertem_live/detectors/base/: connection.html
_modules/libertem_live/detectors/dectris/: acquisition.html  common.html  connection.html
_modules/libertem_live/detectors/memory/: acquisition.html
_modules/libertem_live/detectors/merlin/: acquisition.html  connection.html  control.html
_modules/libertem_live/udf/: monitor.html  record.html
_sources/: index.rst.txt  installation.rst.txt  usage.rst.txt
_sources/reference/: merlin.rst.txt
_static/: documentation_options.js
benchmarks/: utils.py
changelog/documentation/: empty.html
changelog/misc/: mock_merlin_ds.html
ci/: run-with-sim.sh
corporatedesign/: README
detectors/: asi_tpx3.html  dectris.html  merlin.html
docs/: Makefile  make.bat
docs/source/: acknowledgments.rst  changelog.rst  conf.py  dectris-acquisition-example.nblink  detectors.rst  examples.rst  index.rst  installation.rst  merlin-example.nblink  merlin-lowlevel-example.nblink  reference.rst  references-libertem_live.bib  usage.rst
docs/source/changelog/bugfix/: empty.rst  iter.rst  mib-simulator-fixes.rst  pool_flakyness.rst
docs/source/changelog/features/: api-evolution.rst  asi-tpx3-support.rst  create_package.rst  dectris.rst  merlindwelltime.rst  new-merlin-backend.rst  pipelined.rst  python-313.rst  python-314.rst  quad.rst  (+4 more)
docs/source/detectors/: asi_tpx3.rst  dectris.rst  merlin.rst
docs/source/reference/: asi_tpx3.rst  dectris.rst  memory.rst  merlin.rst
examples/: dectris-acquisition.ipynb  live-in-situ.ipynb  low-level-frame-streams.ipynb  merlin-digital-micrograph.py  merlin-minimal-example.ipynb  run-udf-on-merlin-data.ipynb  ssb-live-reconstruction.ipynb  sweep.temp.prf
packaging/: contributors.json  creators.json  zenodo-upload.json
prototypes/: 2021-04-03-next-try-Copy1.ipynb  2021-04-03-next-try.ipynb  2021-04-23-multi-process-proto-1.ipynb  2021-04-23-multi-process-proto-2-veth.ipynb  2021-04-23-multi-process-proto-2.ipynb  2021-05-05-decode-bulk.ipynb  2022-06-29-merlin-pipelined-cleaned.ipynb  23-01-26-dectris-passive-api.ipynb  Trigger.ipynb  apidebug.ipynb  dectris.ipynb  dectrisclient.ipynb  low-level-quad-support.ipynb  memory.ipynb  multip.py  packet_reordering.ipynb  quad_support.ipynb  shmbench.py  test_get_tiles.ipynb  zmq_record.ipynb  zmq_replay.ipynb
prototypes/xspectrum/: xspectrum-playground.ipynb
reference/: asi_tpx3.html  dectris.html  memory.html  merlin.html
scripts/: bake_rev.py  codecov.sh  deploy_docs  release  zenodo_upload
src/libertem_live/: __version__.py  api.py  channel.py  hooks.py
src/libertem_live/detectors/: common.py
src/libertem_live/udf/: monitor.py  record.py
src/libertem_live/utils/: net.py
src/libertem_live/viz/: base.py  mpl.py
tests/: conftest.py  test_api.py  test_cam_server.py  test_global_state.py  test_smoke.py  utils.py
tests/detectors/: test_k2is.py  test_merlin.py
tests/detectors/asi_mpx3/: test_asi_mpx3.py
tests/detectors/asi_tpx3/: conftest.py  test_asi_tpx3.py  test_asi_tpx3_mock.py  test_asi_tpx3_sim.py
tests/detectors/base/: test_base.py
tests/detectors/dectris/: test_dectris.py  test_mocked.py
tests/detectors/memory/: test_memory.py
tests/detectors/merlin/: conftest.py  test_decoders.py  test_headers.py  test_merlin.py  test_merlin_mockds.py  test_server.py  test_sim.py
tests/detectors/xspectrum/: test_xspectrum.py
tests/udf/: test_monitor.py  test_record.py
(+52 files in other folders)
